[package]
name = "mc_mencius"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "suggestions"] }
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = "*"

[build-dependencies]
tonic-build = "*"
