[package]
name = "mc_mencius"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mencius-server"
path = "src/mencius_server.rs"

[[bin]]
name = "paxos-server"
path = "src/paxos_server.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.93"
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive", "suggestions"] }
dashmap = "6.1.0"
derive_builder = "0.20.2"
prost = "0.13.3"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.122"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = "*"

[build-dependencies]
tonic-build = "*"
